# SickJumps

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  README.txt
extra/: SickJumpsExample.avs
src/: SickJumps.cpp  SickJumps.h  SickJumps.rc.in  SickJumpsCore.cpp  SickJumpsCore.h  interface.cpp
test/: SickJumpsTest.avs
test/src/: SickJumps-test.rc.in  frames.cpp  main.cpp  samples.cpp
